# dty-intentforge

./: .gitignore  Makefile  README.md  pyproject.toml  request.json
app/: __init__.py  main.py
app/api/: __init__.py  nlu_router.py
app/core/: __init__.py  config.py  rasa_loader.py
app/schemas/: __init__.py  nlu_schema.py
docs/: API使用示例.md  API结果解读文档.md  产品设计文档.md
docs/项目理解/: 项目设计文档.md
models/: .gitkeep
rasa_data/: config.yml  domain.yml  nlu.yml
scripts/: train_rasa_nlu.py
