[project]
name = "erp-rasa-nlu-service"
version = "1.0.0"
description = "ERP 智能意图识别服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0,<0.104.0",
    "uvicorn[standard]>=0.24.0",
    "rasa>=3.6.0",
    "pydantic>=1.10.0,<1.10.10",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0,<23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
